# libvmaf-sys

./: .dccache  Cargo.toml  Dockerfile  build.rs  native-gcc-g++.ini  readme.md  wrapper.h
.devcontainer/: devcontainer.json
.github/workflows/: docker-image.yml
src/: lib.rs
